修复了一些小bug，这次提交后，后面的修改使用copilot进行编辑，因此保存这一次的操作，避免以后要回退

--- a/scripts/database_related_operation.ipynb
+++ b/scripts/database_related_operation.ipynb
@@ -20,6 +20,25 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建数据库\n",
+    "\n",
+    "conn.start_transaction()\n",
+    "\n",
+    "try:\n",
+    "    sql = 'CREATE SCHEMA IF NOT EXISTS attendance_system'\n",
+    "    cursor.execute(sql)\n",
+    "    conn.commit()\n",
+    "except Exception as e:\n",
+    "    conn.rollback()\n",
+    "    print(\"Error creating database:\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -33,9 +52,6 @@
     "conn.start_transaction()\n",
     "\n",
     "try:\n",
-    "    # Create the schema\n",
-    "    create_schema = \"CREATE SCHEMA IF NOT EXISTS attendance_system\"\n",
-    "    cursor.execute(create_schema)\n",
     "\n",
     "    # Switch to the new schema\n",
     "    cursor.execute(\"USE attendance_system\")\n",
@@ -104,6 +120,147 @@
     "    # 如果发生错误，回滚事务\n",
     "    conn.rollback()\n",
     "    print(f\"An error occurred: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成功生成数据库数据\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 生成数据\n",
+    "import random\n",
+    "from faker import Faker\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "\n",
+    "cursor.execute(\"USE attendance_system\")\n",
+    "fake = Faker(\"zh_CN\")\n",
+    "\n",
+    "\n",
+    "conn.start_transaction()\n",
+    "\n",
+    "try:\n",
+    "    # 插入老师数据\n",
+    "    teachers = []  # Use a list to store unique teachers\n",
+    "    existing_usernames = set()  # Track unique usernames\n",
+    "    while len(teachers) < 20:\n",
+    "        name = fake.name()\n",
+    "        username = name\n",
+    "        password = name\n",
+    "        if username not in existing_usernames:  # Ensure uniqueness\n",
+    "            teachers.append((name, username, password))\n",
+    "            existing_usernames.add(username)\n",
+    "\n",
+    "    cursor.executemany(\n",
+    "        \"INSERT INTO teacher (name, username, password) VALUES (%s, %s, %s)\", teachers\n",
+    "    )\n",
+    "\n",
+    "    # 插入课程数据\n",
+    "    # 定义50个真实的中文课程名称\n",
+    "    course_names = [\n",
+    "        # 理工类课程\n",
+    "        \"高等数学\", \"线性代数\", \"概率论与数理统计\", \"大学物理\", \"工程力学\",\n",
+    "        \"电路分析基础\", \"模拟电子技术\", \"数字电子技术\", \"信号与系统\", \"自动控制原理\",\n",
+    "        \"数据结构与算法\", \"计算机组成原理\", \"操作系统\", \"计算机网络\", \"数据库系统原理\",\n",
+    "        \"软件工程\", \"人工智能导论\", \"机器学习\", \"深度学习\", \"计算机视觉\",\n",
+    "        \n",
+    "        # 文科类课程\n",
+    "        \"中国近现代史纲要\", \"马克思主义基本原理\", \"思想道德修养与法律基础\", \"毛泽东思想与中国特色社会主义理论体系概论\", \"形势与政策\",\n",
+    "        \"大学英语\", \"学术英语写作\", \"中国文学史\", \"世界文学史\", \"新闻采访与写作\",\n",
+    "        \n",
+    "        # 商科类课程\n",
+    "        \"微观经济学\", \"宏观经济学\", \"管理学原理\", \"会计学原理\", \"财务管理\",\n",
+    "        \"市场营销学\", \"国际贸易实务\", \"电子商务概论\", \"企业战略管理\", \"人力资源管理\",\n",
+    "        \n",
+    "        # 医学/生物类课程\n",
+    "        \"人体解剖学\", \"生理学\", \"病理学\", \"药理学\", \"免疫学基础\",\n",
+    "        \"生物化学\", \"分子生物学\", \"遗传学\", \"微生物学\", \"有机化学\"\n",
+    "    ]\n",
+    "\n",
+    "    # 替换原有的课程生成代码\n",
+    "    courses = []\n",
+    "    for i in range(50):\n",
+    "        course_name = course_names[i]  # 使用预定义的课程名称\n",
+    "        teacher_username = random.choice(teachers)[1]\n",
+    "        courses.append((course_name, teacher_username))\n",
+    "\n",
+    "    cursor.executemany(\n",
+    "        \"INSERT INTO course (course_name, teacher_username) VALUES (%s, %s)\", courses\n",
+    "    )\n",
+    "\n",
+    "    # 插入学生数据\n",
+    "    students = []\n",
+    "    for i in range(500):\n",
+    "        name = fake.name()\n",
+    "        gender = random.choice([\"男\", \"女\"])\n",
+    "        age = str(random.randint(18, 25))\n",
+    "        is_face_collected = False\n",
+    "        students.append((gender, age, name, is_face_collected))\n",
+    "\n",
+    "    cursor.executemany(\n",
+    "        \"INSERT INTO student (gender, age, name, is_face_collected) VALUES (%s, %s, %s, %s)\",\n",
+    "        students,\n",
+    "    )\n",
+    "\n",
+    "    # 获取学生的实际 ID\n",
+    "    cursor.execute(\"SELECT id FROM student\")\n",
+    "    student_ids = [row[0] for row in cursor.fetchall()]\n",
+    "\n",
+    "    # 插入课程学生数据\n",
+    "    course_student = []\n",
+    "    for student_id in student_ids:\n",
+    "        enrolled_courses = random.sample(courses, random.randint(5, 8))\n",
+    "        for course in enrolled_courses:\n",
+    "            course_student.append((course[0], student_id))\n",
+    "\n",
+    "    cursor.executemany(\n",
+    "        \"INSERT INTO course_student (course_name, student_id) VALUES (%s, %s)\", course_student\n",
+    "    )\n",
+    "\n",
+    "    # 插入签到表数据\n",
+    "    attendance_info = []\n",
+    "    start_date = datetime(2025, 3, 20)\n",
+    "    end_date = datetime(2025, 3, 26)\n",
+    "    date_range = (end_date - start_date).days + 1\n",
+    "\n",
+    "    for day in range(date_range):\n",
+    "        current_date = start_date + timedelta(days=day)\n",
+    "        for course in courses:\n",
+    "            course_name = course[0]\n",
+    "            enrolled_students = [\n",
+    "                student_id\n",
+    "                for course_name_, student_id in course_student\n",
+    "                if course_name_ == course_name\n",
+    "            ]\n",
+    "            attendance_count = int(len(enrolled_students) * random.uniform(0.9, 0.99))\n",
+    "            attending_students = random.sample(enrolled_students, attendance_count)\n",
+    "            for student_id in attending_students:\n",
+    "                attendance_info.append((current_date, student_id, course_name, True))\n",
+    "\n",
+    "    cursor.executemany(\n",
+    "        \"INSERT INTO attendance_info (date, stu_id, course_name, is_attendance) VALUES (%s, %s, %s, %s)\",\n",
+    "        attendance_info,\n",
+    "    )\n",
+    "\n",
+    "    # 最后提交事务\n",
+    "    conn.commit()\n",
+    "    print(\"成功生成数据库数据\")\n",
+    "except Exception as e:\n",
+    "    conn.rollback()\n",
+    "    print(f\"An error occurred: {e}\")\n"
    ]
   },
   {
@@ -191,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -202,125 +359,7 @@
      ]
     }
    ],
-   "source": [
-    "# 生成数据\n",
-    "import random\n",
-    "from faker import Faker\n",
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "\n",
-    "cursor.execute(\"USE attendance_system\")\n",
-    "fake = Faker(\"zh_CN\")\n",
-    "\n",
-    "# 插入老师数据\n",
-    "teachers = []  # Use a list to store unique teachers\n",
-    "existing_usernames = set()  # Track unique usernames\n",
-    "while len(teachers) < 20:\n",
-    "    name = fake.name()\n",
-    "    username = name\n",
-    "    password = name\n",
-    "    if username not in existing_usernames:  # Ensure uniqueness\n",
-    "        teachers.append((name, username, password))\n",
-    "        existing_usernames.add(username)\n",
-    "\n",
-    "cursor.executemany(\n",
-    "    \"INSERT INTO teacher (name, username, password) VALUES (%s, %s, %s)\", teachers\n",
-    ")\n",
-    "conn.commit()\n",
-    "\n",
-    "# 插入课程数据\n",
-    "# 定义50个真实的中文课程名称\n",
-    "course_names = [\n",
-    "    # 理工类课程\n",
-    "    \"高等数学\", \"线性代数\", \"概率论与数理统计\", \"大学物理\", \"工程力学\",\n",
-    "    \"电路分析基础\", \"模拟电子技术\", \"数字电子技术\", \"信号与系统\", \"自动控制原理\",\n",
-    "    \"数据结构与算法\", \"计算机组成原理\", \"操作系统\", \"计算机网络\", \"数据库系统原理\",\n",
-    "    \"软件工程\", \"人工智能导论\", \"机器学习\", \"深度学习\", \"计算机视觉\",\n",
-    "    \n",
-    "    # 文科类课程\n",
-    "    \"中国近现代史纲要\", \"马克思主义基本原理\", \"思想道德修养与法律基础\", \"毛泽东思想与中国特色社会主义理论体系概论\", \"形势与政策\",\n",
-    "    \"大学英语\", \"学术英语写作\", \"中国文学史\", \"世界文学史\", \"新闻采访与写作\",\n",
-    "    \n",
-    "    # 商科类课程\n",
-    "    \"微观经济学\", \"宏观经济学\", \"管理学原理\", \"会计学原理\", \"财务管理\",\n",
-    "    \"市场营销学\", \"国际贸易实务\", \"电子商务概论\", \"企业战略管理\", \"人力资源管理\",\n",
-    "    \n",
-    "    # 医学/生物类课程\n",
-    "    \"人体解剖学\", \"生理学\", \"病理学\", \"药理学\", \"免疫学基础\",\n",
-    "    \"生物化学\", \"分子生物学\", \"遗传学\", \"微生物学\", \"有机化学\"\n",
-    "]\n",
-    "\n",
-    "# 替换原有的课程生成代码\n",
-    "courses = []\n",
-    "for i in range(50):\n",
-    "    course_name = course_names[i]  # 使用预定义的课程名称\n",
-    "    teacher_username = random.choice(teachers)[1]\n",
-    "    courses.append((course_name, teacher_username))\n",
-    "\n",
-    "cursor.executemany(\n",
-    "    \"INSERT INTO course (course_name, teacher_username) VALUES (%s, %s)\", courses\n",
-    ")\n",
-    "conn.commit()\n",
-    "\n",
-    "# 插入学生数据\n",
-    "students = []\n",
-    "for i in range(500):\n",
-    "    name = fake.name()\n",
-    "    gender = random.choice([\"男\", \"女\"])\n",
-    "    age = str(random.randint(18, 25))\n",
-    "    is_face_collected = False\n",
-    "    students.append((gender, age, name, is_face_collected))\n",
-    "\n",
-    "cursor.executemany(\n",
-    "    \"INSERT INTO student (gender, age, name, is_face_collected) VALUES (%s, %s, %s, %s)\",\n",
-    "    students,\n",
-    ")\n",
-    "conn.commit()\n",
-    "\n",
-    "# 获取学生的实际 ID\n",
-    "cursor.execute(\"SELECT id FROM student\")\n",
-    "student_ids = [row[0] for row in cursor.fetchall()]\n",
-    "\n",
-    "# 插入课程学生数据\n",
-    "course_student = []\n",
-    "for student_id in student_ids:\n",
-    "    enrolled_courses = random.sample(courses, random.randint(5, 8))\n",
-    "    for course in enrolled_courses:\n",
-    "        course_student.append((course[0], student_id))\n",
-    "\n",
-    "cursor.executemany(\n",
-    "    \"INSERT INTO course_student (course_name, student_id) VALUES (%s, %s)\", course_student\n",
-    ")\n",
-    "conn.commit()\n",
-    "\n",
-    "# 插入签到表数据\n",
-    "attendance_info = []\n",
-    "start_date = datetime(2025, 3, 20)\n",
-    "end_date = datetime(2025, 3, 26)\n",
-    "date_range = (end_date - start_date).days + 1\n",
-    "\n",
-    "for day in range(date_range):\n",
-    "    current_date = start_date + timedelta(days=day)\n",
-    "    for course in courses:\n",
-    "        course_name = course[0]\n",
-    "        enrolled_students = [\n",
-    "            student_id\n",
-    "            for course_name_, student_id in course_student\n",
-    "            if course_name_ == course_name\n",
-    "        ]\n",
-    "        attendance_count = int(len(enrolled_students) * random.uniform(0.9, 0.99))\n",
-    "        attending_students = random.sample(enrolled_students, attendance_count)\n",
-    "        for student_id in attending_students:\n",
-    "            attendance_info.append((current_date, student_id, course_name, True))\n",
-    "\n",
-    "cursor.executemany(\n",
-    "    \"INSERT INTO attendance_info (date, stu_id, course_name, is_attendance) VALUES (%s, %s, %s, %s)\",\n",
-    "    attendance_info,\n",
-    ")\n",
-    "conn.commit()\n",
-    "\n",
-    "print(\"数据生成完成！\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -376,74 +415,6 @@
     "    # Rollback transaction in case of error\n",
     "    conn.rollback()\n",
     "    print(f\"An error occurred: {e}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('new',)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query = '''\n",
-    "        SHOW TABLES'''\n",
-    "\n",
-    "cursor.execute(query)\n",
-    "result = cursor.fetchall()\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('x',)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q = \"\"\"\n",
-    "    SELECT name\n",
-    "    FROM new\n",
-    "    WHERE id = 1\"\"\"\n",
-    "\n",
-    "cursor.execute(q)\n",
-    "res = cursor.fetchall()\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"\n",
-    "        SELECT COUNT(*)\n",
-    "        FROM INFORMATION_SCHEMA.COLUMNS\n",
-    "        WHERE table_name = 'class1';\n",
-    "\"\"\"\n",
-    "table = 'class1'\n",
-    "cursor.execute('SELECT COUNT(*) FROM %s' %  table)\n",
-    "results = cursor.fetchone()\n"
    ]
   }
  ],
