--- a/scripts/faiss_database.ipynb
+++ b/scripts/faiss_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,57 @@
     "faiss_index_path = os.path.join(current_dir, \"..\", \"data\", \"vec_databases\", \"vecdb.faiss\")\n",
     "\n",
     "# 加载本地 FAISS 向量数据库\n",
-    "vec_db = faiss.IndexIDMap(faiss.IndexFlatIP(512))\n",
+    "vec_db = faiss.read_index(faiss_index_path)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vec_db.ntotal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current number of vectors in the database: 2\n",
+      "All vectors removed from the database\n",
+      "Empty FAISS index saved to: c:\\Users\\shann\\Desktop\\SE\\attendance_system\\scripts\\..\\data\\vec_databases\\vecdb.faiss\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the original number of vectors in the database\n",
+    "original_count = vec_db.ntotal\n",
+    "print(f\"Current number of vectors in the database: {original_count}\")\n",
+    "\n",
+    "# Remove all vectors from the index\n",
+    "vec_db.reset()\n",
+    "print(f\"All vectors removed from the database\")\n",
+    "\n",
+    "# Save the empty index back to disk\n",
+    "faiss.write_index(vec_db, faiss_index_path)\n",
+    "print(f\"Empty FAISS index saved to: {faiss_index_path}\")"
    ]
   },
   {
